<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/level"
        android:text="@string/level_2"
        android:textSize="@dimen/level_text"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/level"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/right_is_always_right"
        android:textSize="@dimen/subtext"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/hello"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/hello"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/no"
        android:id="@+id/cont"
        android:backgroundTint="@color/teal_200"

        />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/no"
        android:backgroundTint="@color/teal_200"
        />

</androidx.constraintlayout.widget.ConstraintLayout>